<resources>
    <string name="app_name">Imagine</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">settings</string>
    <string name="filter">filters</string>
    <string name="popular_photos">Popular photos</string>
    <string name="share">Share</string>
    <string name="colors">colors</string>
    <string name="back" />
    <string name="previewphoto">previewPhoto</string>
    <string name="loadingpreviewphoto">LoadingPreviewPhoto</string>
    <string name="set_as_wallpaper">Set As Wallpaper</string>
    <string name="export_to_gallery">Export to Gallery</string>
    <string name="home_screen">Home Screen</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="both_screen">Home and Lock Screen</string>
    <string name="popular_videos">Popular Videos</string>
    <string name="description">button</string>
    <string name="your_favourites">Your favourites</string>
    <string name="photos">Photos</string>
    <string name="videos">Videos</string>
    <string name="delete">Delete</string>
    <string name="liked_video">liked_video</string>
</resources>