<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <TextView
        android:id="@+id/homeScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semibold"
        android:padding="@dimen/dimen_12"
        android:text="@string/home_screen"
        android:textColor="@color/colorWhite"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorWhite" />

    <TextView
        android:id="@+id/lockScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semibold"
        android:padding="@dimen/dimen_12"
        android:text="@string/lock_screen"
        android:textColor="@color/colorWhite"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorWhite" />

    <TextView
        android:id="@+id/homeAndLockScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semibold"
        android:padding="@dimen/dimen_12"
        android:text="@string/both_screen"
        android:textColor="@color/colorWhite"
        android:textSize="18sp" />


</LinearLayout>