<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".screens.PhotoPreviewActivity">


    <ImageView
        android:id="@+id/photoPreviewBackButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginTop="@dimen/dimen_24"
        android:contentDescription="@string/back"
        android:padding="5dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/colorPrimary" />


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/back"
        android:padding="5dp"
        android:src="@drawable/ic_favorite_border"
        app:layout_constraintBottom_toBottomOf="@+id/photoPreviewBackButton"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/photoPreviewBackButton"
        app:tint="@color/colorPrimary" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="@dimen/dimen_8"
        android:contentDescription="@string/back"
        android:padding="5dp"
        android:src="@drawable/ic_vert_more"
        app:layout_constraintBottom_toBottomOf="@+id/photoPreviewBackButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/photoPreviewBackButton"
        app:layout_constraintVertical_bias="0.0"
        app:tint="@color/colorPrimary" />

    <TextView
        android:id="@+id/photoName"
        android:layout_width="0dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semibold"
        android:text="Picollo"
        android:layout_marginStart="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/colorWhite"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="@+id/photoPreviewBackButton"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintStart_toEndOf="@+id/photoPreviewBackButton"
        app:layout_constraintTop_toTopOf="@+id/photoPreviewBackButton"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/photoAuthor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semibold"
        android:text="By some user name"
        android:textAlignment="center"
        android:textColor="#979797"
        android:textSize="16sp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintEnd_toEndOf="@+id/photoName"
        app:layout_constraintStart_toStartOf="@+id/photoName"
        app:layout_constraintTop_toBottomOf="@+id/photoName" />

    <ImageView
        android:id="@+id/previewPhoto"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:contentDescription="@string/previewphoto"
        android:transitionName="trans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photoAuthor" />

    <ImageView
        android:id="@+id/previewPhotoHandler"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:contentDescription="@string/loadingpreviewphoto"
        android:transitionName="trans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photoAuthor"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>