<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".screens.VideosFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/dimen_16"
            android:contentDescription="@string/settings"
            android:padding="5dp"
            android:src="@drawable/ic_settings"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView"
            app:tint="@color/colorPrimary" />

        <ImageView
            android:id="@+id/videoFiltersImageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/filter"
            android:padding="5dp"
            android:src="@drawable/ic_filter"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:tint="@color/colorPrimary" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/popular_videos"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_16"
            android:fontFamily="@font/opensans_regular"
            android:text="@string/share"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView" />

        <EditText
            android:id="@+id/searchVideoET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8"
            android:background="@drawable/rounded_border_5"
            android:backgroundTint="#3B3B3B"
            android:drawableStart="@drawable/ic_search"
            android:drawableEnd="@drawable/ic_clear"
            android:drawablePadding="10dp"
            android:fontFamily="@font/opensans_semibold"
            android:hint="Search"
            android:imeActionLabel="Done"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="15dp"
            android:paddingBottom="10dp"
            android:singleLine="true"
            android:textColor="#E1E1E1"
            android:textColorHint="#ACACAC"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/videoFiltersImageView" />

        <androidx.recyclerview.widget.RecyclerView
                  android:id="@+id/videosRecyclerView"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/dimen_24"
                  android:clipToPadding="true"
                  android:overScrollMode="never"
                  android:paddingStart="5dp"
                  android:paddingEnd="5dp"
                  android:paddingBottom="12dp"
                  android:scrollbars="none"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/searchVideoET" />

 <!--       <Button
            android:id="@+id/loadMoreButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_4"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_border_5"
            android:backgroundTint="#3B3B3B"
            android:fontFamily="@font/montserrat_semibold"
            android:paddingStart="@dimen/dimen_16"
            android:paddingEnd="@dimen/dimen_16"
            android:text="Load more"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/videosRecyclerView"
            app:layout_constraintVertical_bias="0.0" />

        <ProgressBar
            android:id="@+id/loadMoreProgress"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/videosRecyclerView"
            app:layout_constraintVertical_bias="0.0" />-->


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>